--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -9,7 +9,6 @@
             <h1>header</h1>
             <ul>
                 <li><a href="./index.html">home</a></li>
-                <li><a href="./tweets.html">>tweets</a></li>
             </ul>
         </header>
         <main>
@@ -45,6 +44,6 @@
                 </ol>
             </aside>
         </main>
-        <footer><p>Made By Bonaparte - <a href="https://github.com/Bonaparte003" target="_blank">visit</a></p></footer>
+        <footer><p>Made By Bonaparte - <a href="https://github.com/Bonaparte003" target="_blank">here</a></p></footer>
     </body>
 </html>
