--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -8,7 +8,6 @@
         <header>
             <h1>header</h1>
             <ul>
-                <li><a href="./index.html">home</a></li>
                 <li><a href="./tweets.html">>tweets</a></li>
             </ul>
         </header>
@@ -43,6 +42,6 @@
                 </ol>
             </aside>
         </main>
-        <footer><p>Made By Bonaparte - <a href="https://github.com/Bonaparte003" target="_blank">visit</a></p></footer>
+        <footer><p>Made By Bonaparte - <a href="https://github.com/Bonaparte003" target="_blank">here</a></p></footer>
     </body>
 </html>
