--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -8,7 +8,7 @@
         <header>
             <h1>header</h1>
             <ul>
-                <li><a href="./tweets.html">>tweets</a></li>
+                <li><a href="./tweets.html">tweets</a></li>
             </ul>
         </header>
         <main>
