--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -3,14 +3,15 @@
     <head>
         <title>title</title>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="base.css" rel="stylesheet">
         <link href="styles.css" rel="stylesheet">
     </head>
-    <body>
+    <body class="works_on_smartphone">
         <header>
-            <h1>header</h1>
+            <h1>Home Page</h1>
             <ul>
-                <li><a href="./tweets.html">tweets</a></li>
+                <li><a href="./tweets.html">Tweets</a></li>
             </ul>
         </header>
         <main>
