--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>title</title>
+        <title>Title</title>
         <meta charset="UTF-8">
     </head>
     <body>
@@ -42,6 +42,6 @@
                 </ol>
             </aside>
         </main>
-        <footer><p>Made By Bonaparte - <a href="https://github.com/Bonaparte003" target="_blank">here</a></p></footer>
+        <footer><p>Made by Bonaparte - <a href="https://github.com/Bonaparte003" target="_blank">here</a></p></footer>
     </body>
 </html>
