--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
-    <link rel="icon" href="./images/logo.png" height="20px">
+    <link rel="icon" href="./images/smile.png">
     <title>SmileSchool</title>
 </head>
 <body>
